--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -12,6 +12,7 @@ allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:304:300::5bb5;
 allow 2001:41d0:304:300::74bf;
+allow 2001:41d0:601:1100::2947;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:801:1000::1b55;
 allow 2001:41d0:801:1000::c2;
@@ -105,13 +106,10 @@ allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:3514::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
-allow 2400:8901::f03c:95ff:fe89:4a88;
-allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:1c02:2d4::;
@@ -131,8 +129,6 @@ allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:f704:6::1;
 allow 2602:f9f3:0:2::319;
-allow 2602:fa59:1:60::1;
-allow 2602:fa59:8:43::1;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
@@ -775,4 +771,3 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
-allow 2c0f:6cf::1000;
