--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,6 +1,7 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
+allow 102.211.56.102;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
@@ -67,6 +68,7 @@ allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.9;
 allow 107.189.2.108;
+allow 107.189.27.89;
 allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.236;
@@ -133,7 +135,6 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.147.97.190;
 allow 141.164.38.67;
 allow 141.94.156.206;
 allow 141.94.156.54;
@@ -148,7 +149,6 @@ allow 144.172.118.73;
 allow 146.103.33.218;
 allow 146.59.126.232;
 allow 146.59.231.4;
-allow 146.59.87.32;
 allow 147.45.116.145;
 allow 148.113.194.31;
 allow 149.202.79.101;
@@ -722,7 +722,6 @@ allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:304:300::5bb5;
 allow 2001:41d0:304:300::74bf;
-allow 2001:41d0:601:1100::2947;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:801:1000::1b55;
 allow 2001:41d0:801:1000::c2;
@@ -963,7 +962,6 @@ allow 217.199.199.250;
 allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
-allow 23.133.204.6;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
@@ -999,6 +997,7 @@ allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1035,7 +1034,6 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
-allow 2602:f704:6::1;
 allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
@@ -1334,6 +1332,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1680,6 +1679,7 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
+allow 2c0f:6c0:0:12::c0ff:ee;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
@@ -1763,6 +1763,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
 allow 45.84.107.17;
@@ -1807,6 +1808,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.230.174.6;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
