--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -12,7 +12,6 @@ allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:304:300::5bb5;
 allow 2001:41d0:304:300::74bf;
-allow 2001:41d0:601:1100::2947;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:801:1000::1b55;
 allow 2001:41d0:801:1000::c2;
@@ -127,7 +126,6 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
-allow 2602:f704:6::1;
 allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
@@ -425,6 +423,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -771,3 +770,4 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
+allow 2c0f:6c0:0:12::c0ff:ee;
