--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -2,6 +2,7 @@ allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
 allow 102.211.56.102;
+allow 102.211.56.250;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
@@ -223,7 +224,6 @@ allow 176.58.121.177;
 allow 176.65.138.250;
 allow 176.65.143.138;
 allow 176.97.114.202;
-allow 178.162.175.5;
 allow 178.162.197.91;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -698,7 +698,6 @@ allow 198.98.51.249;
 allow 198.98.54.49;
 allow 198.98.57.151;
 allow 198.98.57.74;
-allow 198.98.60.90;
 allow 198.98.61.60;
 allow 198.98.62.158;
 allow 199.195.249.214;
@@ -961,7 +960,6 @@ allow 217.12.221.131;
 allow 217.199.199.250;
 allow 23.129.64.171;
 allow 23.129.64.172;
-allow 23.129.64.173;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
@@ -975,7 +973,6 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1144,7 +1141,6 @@ allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
-allow 2620:18c:0:192::173;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
 allow 2620:7:6001::103;
@@ -1680,9 +1676,9 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
 allow 2c0f:6c0:0:12::c0ff:ee;
+allow 2c0f:6c0:0:12::face:b00c;
 allow 31.129.22.65;
 allow 31.133.0.210;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1697,6 +1693,7 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.75.136.144;
 allow 38.97.116.244;
 allow 40.160.3.1;
@@ -1763,7 +1760,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
 allow 45.84.107.17;
