--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -236,7 +236,6 @@ allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
-allow 2620:18c:0:192::173;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
 allow 2620:7:6001::103;
@@ -771,3 +770,4 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
 allow 2c0f:6c0:0:12::c0ff:ee;
+allow 2c0f:6c0:0:12::face:b00c;
