--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -236,7 +236,6 @@ deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::171;
 deny 2620:18c:0:192::172;
-deny 2620:18c:0:192::173;
 deny 2620:7:6001::101;
 deny 2620:7:6001::102;
 deny 2620:7:6001::103;
@@ -771,3 +770,4 @@ deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:a800:2:1:45:80:158:69;
 deny 2a13:d207:0:461::1;
 deny 2c0f:6c0:0:12::c0ff:ee;
+deny 2c0f:6c0:0:12::face:b00c;
