--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -236,7 +236,6 @@ set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::171;
 set_real_ip_from 2620:18c:0:192::172;
-set_real_ip_from 2620:18c:0:192::173;
 set_real_ip_from 2620:7:6001::101;
 set_real_ip_from 2620:7:6001::102;
 set_real_ip_from 2620:7:6001::103;
@@ -771,3 +770,4 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 2c0f:6c0:0:12::c0ff:ee;
+set_real_ip_from 2c0f:6c0:0:12::face:b00c;
