--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -124,7 +124,6 @@ allow 109.70.100.71;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
-allow 121.78.28.166;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -151,7 +150,6 @@ allow 146.103.33.218;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
-allow 147.45.221.10;
 allow 148.113.194.31;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -240,7 +238,6 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.197.91;
 allow 179.35.3.244;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -661,6 +658,7 @@ allow 194.163.130.99;
 allow 194.163.157.49;
 allow 194.233.174.56;
 allow 194.26.192.77;
+allow 194.53.137.156;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
@@ -957,8 +955,6 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 216.239.90.19;
-allow 216.73.159.101;
-allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.199.199.250;
 allow 23.129.64.171;
@@ -1335,6 +1331,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1592,6 +1589,8 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:1d80:13:51e8::1;
+allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1785,6 +1784,7 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
+allow 46.195.170.204;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1808,6 +1808,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.230.174.6;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1840,7 +1841,6 @@ allow 57.128.164.66;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
-allow 62.182.84.146;
 allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
@@ -1862,12 +1862,14 @@ allow 79.124.60.174;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
+allow 80.78.26.167;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 80.94.92.84;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.181.104.22;
 allow 8.208.26.177;
 allow 8.209.106.19;
 allow 82.221.128.191;
